--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <script>
     'use strict';
 
+    // 「() => {}」アロー関数
     document.getElementById('target').addEventListener('click', () => {
       document.getElementById('target').style.background = 'pink';
+      document.getElementById('target').style.borderRadius = '50%';
     });
   </script>
 </body>
