--- a/index.html
+++ b/index.html
@@ -4,32 +4,56 @@
   <meta charset="utf-8">
   <title>JavaScript Practice</title>
   <style>
+    body {
+      display: flex;
+      flex-wrap: wrap;
+    }
     .box {
       width: 100px;
       height: 100px;
       background-color: skyblue;
       cursor: pointer;
       transition: 0.8s;
+      margin: 10px 8px;
+      text-align: center;
+      line-height: 100px;
     }
-    .circle {
+    .win {
       background: pink;
       border-radius: 50%;
       transform: rotate(360deg);
     }
+    .lose {
+      transform: 0.9s;
+    }
   </style>
 </head>
 <body>
-  <div class="box" id="target"></div>
-
   <script>
     'use strict';
 
-    // 「() => {}」アロー関数
-    document.getElementById('target').addEventListener('click', () => {
-      // document.getElementById('target').style.background = 'pink';
-      // document.getElementById('target').style.borderRadius = '50%';
-      document.getElementById('target').classList.add('circle');
-    });
+
+    const num = 5;
+    const winner = Math.floor(Math.random() * num); // 0 ~ 4
+
+    for (let i = 0; i < num; i++) {
+      const div = document.createElement('div');
+      div.classList.add('box');
+
+      div.addEventListener('click', () => {
+        if (i === winner) {
+          div.textContent = 'Win!';
+          div.classList.add('win');
+        }
+        else {
+          div.textContent = 'Lose!';
+          div.classList.add('lose');
+        }
+      })
+
+      document.body.appendChild(div);
+    }
+
   </script>
 </body>
 </html>
